Added some instructions

--- a/910-rat.conf
+++ b/910-rat.conf
@@ -1,3 +1,6 @@
+#put this is /usr/share/X11/xorg.conf.d/
+#delete these first two lines
+
 Section "InputClass"
 	Identifier "R.A.T."
 	MatchProduct "R.A.T.7|R.A.T.9"
